fix: fixed 'invisible' headers into two sections to stop validator warnings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,12 @@ a {
     text-decoration: none;
 }
 
+.hidden {
+    height: 0px;
+    width: 0px;
+    overflow: hidden;
+}
+
 /* General carousel edits */
 .gallery-cell {
     width: 100%;
@@ -271,7 +277,8 @@ a {
 }
 
 .accordion-item {
-    padding-left: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .accordion-container label {
